--- a/src/gradients.css
+++ b/src/gradients.css
@@ -38,3 +38,40 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.gradientBg {
+  /* ff 3.6+ */
+  background: -moz-radial-gradient(
+    circle at 3% 25%,
+    rgba(4, 12, 24, 1) 0%,
+    rgba(12, 16, 56, 1) 100%
+  );
+
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-radial-gradient(
+    circle at 3% 25%,
+    rgba(4, 12, 24, 1) 0%,
+    rgba(12, 16, 56, 1) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-radial-gradient(
+    circle at 3% 25%,
+    rgba(4, 12, 24, 1) 0%,
+    rgba(12, 16, 56, 1) 100%
+  );
+
+  /* ie 10+ */
+  background: -ms-radial-gradient(
+    circle at 3% 25%,
+    rgba(4, 12, 24, 1) 0%,
+    rgba(12, 16, 56, 1) 100%
+  );
+
+  /* global 92%+ browsers support */
+  background: radial-gradient(
+    circle at 3% 25%,
+    rgba(4, 12, 24, 1) 0%,
+    rgba(12, 16, 56, 1) 100%
+  );
+}
