added portfolio styles

--- a/src/containers/AppContainer/App.css
+++ b/src/containers/AppContainer/App.css
@@ -6,4 +6,12 @@
   background: var(--bgColor);
   color: rgb(241, 241, 241);
   overflow: hidden;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sectionPortfolio {
+  width: var(--maxWidth);
 }
