design and project item animation

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --orangeColor: #ff4820;
   --textColor: rgb(241, 241, 241);
   --blueTextColor: #81afdd;
-
+  --grayDark: #757575;
   --maxWidth: 1200px;
 
 }
