--- a/src/containers/Portfolio/Portfolio.module.css
+++ b/src/containers/Portfolio/Portfolio.module.css
@@ -5,4 +5,89 @@
   height: 100vh;
   margin-top: 100px;
   color: #fff;
+  padding: 108px 30px;
+}
+
+.project {
+  position: relative;
+  width: 600px;
+  height: 250px;
+  display: flex;
+  overflow: hidden;
+  border-radius: 10px;
+
+  -webkit-box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
+-moz-box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
+box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
+}
+
+.project:hover > .projectImage {
+  width: 60%;
+  right: 0;
+}
+
+.projectInfo {
+  width: 40%;
+  height: 100%;
+  background-color: #fff;
+  transition: all 1s ease-in-out;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+ul.projectInfo_list {
+  margin-top: auto;
+  width: 100px;
+  width: 100%;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+}
+h3 {
+  font-family: "Archivo Black", sans-serif;
+  margin-bottom: 10px;
+}
+.textInfo {
+  color: var(--grayDark);
+}
+li {
+  width: 25px;
+  height: 25px;
+  margin-right: 15px;
+}
+.icon {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.projectImage {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transition: all .7s ease-in-out;
+  cursor: pointer;
+}
+/* .projectImage:hover {
+  width:70%
+} */
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.githubRow {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #000;
+}
+.githubIcon {
+  cursor: pointer;
+  margin-right: 10px;
+  width: 25px;
+  height: 25px;
 }
