--- a/src/containers/Portfolio/Portfolio.module.css
+++ b/src/containers/Portfolio/Portfolio.module.css
@@ -7,7 +7,12 @@
   color: #fff;
   padding: 108px 30px;
 }
-
+.title {
+  text-align: center;
+  line-height: 100px;
+  font-size: 32px;
+  color: var(--textColor);
+}
 .project {
   position: relative;
   width: 600px;
@@ -25,15 +30,49 @@ box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
   width: 60%;
   right: 0;
 }
-
-.projectInfo {
+.project:hover > .projectInfo_wrapper>.projectInfo {
+  transform: translate(0px);
+  opacity: 1;
+}
+.projectInfo_wrapper {
+  position: relative;
   width: 40%;
-  height: 100%;
   background-color: #fff;
-  transition: all 1s ease-in-out;
+}
+.projectWrapper_circleBg {
+  position: absolute;
+  bottom: -125px;
+  right: -125px;
+  width: 250px;
+  height: 250px;
+  border-radius: 125px;
+  background-color: #E0E0E0;
+}
+.projectWrapper_circleBg_small {
+  position: absolute;
+  top: 70px;
+  right: 50px;
+  width: 35px;
+  height: 35px;
+  border-radius: 100px;
+  background-color: #F5F5F5;
+}
+.projectInfo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  width: 40%;
+  opacity: 0;
+  transform: translate(-150px);
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  transition: all .7s ease-in-out;
 }
 ul.projectInfo_list {
   margin-top: auto;
@@ -46,6 +85,22 @@ ul.projectInfo_list {
 h3 {
   font-family: "Archivo Black", sans-serif;
   margin-bottom: 10px;
+}
+.linkToSite {
+  display: flex;
+  color: var(--grayDark);
+}
+.projectLogo {
+  background-color: var(--bgColor);
+  border-radius: 20px;
+  padding: 5px 10px;
+  display: flex;
+  margin-bottom: 20px;
+  margin-right: 12px;
+
+}
+.camoLogo {
+  width: 60px;
 }
 .textInfo {
   color: var(--grayDark);
@@ -63,15 +118,13 @@ li {
 
 .projectImage {
   position: absolute;
+  z-index: 5;
   right: 0;
   width: 100%;
   height: 100%;
-  transition: all .7s ease-in-out;
   cursor: pointer;
+  transition: all .7s ease-in-out;
 }
-/* .projectImage:hover {
-  width:70%
-} */
 
 .image {
   width: 100%;
