--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,3 +19,23 @@
   width: 50px;
   /* height: 50px; */
 }
+
+ @media screen and (max-width: 850px) {
+  
+}
+@media screen and (max-width: 715px) {
+ .header {
+  padding: 20px;
+ }
+} 
+@media screen and (max-width: 580px) {
+  .menuDesk {
+    display: none;
+  }
+  .headerImg {
+    width: 35px;
+  }
+  .header {
+    padding: 10px;
+  }
+}
