--- a/src/components/PortfolioItem/PortfolioItem.module.css
+++ b/src/components/PortfolioItem/PortfolioItem.module.css
@@ -1,22 +1,19 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  max-width: 1200px;
-  height: 100vh;
-  margin-top: 100px;
-  color: #fff;
-  padding: 108px 30px;
+.projectLong {
+  flex-shrink: 1;
+  transition: all .7s ease-in-out;
 }
-.title {
-  text-align: center;
-  line-height: 100px;
-  font-size: 32px;
-  color: var(--textColor);
+.projectShort {
+  flex-shrink: 2;
+  transition: all .7s ease-in-out;
 }
+
 .project {
   position: relative;
-  width: 600px;
+  width: 800px;
+  min-width: 300px;
+  max-width: 800px;
   height: 250px;
+  min-height: 250px;
   display: flex;
   overflow: hidden;
   border-radius: 10px;
@@ -37,6 +34,7 @@ box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
 .projectInfo_wrapper {
   position: relative;
   width: 40%;
+  height: 100%;
   background-color: #fff;
 }
 .projectWrapper_circleBg {
@@ -63,7 +61,6 @@ box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
   right: 0;
   left: 0;
   z-index: 2;
-  width: 40%;
   opacity: 0;
   transform: translate(-150px);
   overflow: hidden;
@@ -143,4 +140,33 @@ li {
   margin-right: 10px;
   width: 25px;
   height: 25px;
+}
+
+@media screen and (max-width: 1190px) {
+  .projectInfo_wrapper {
+    width: 60%;
+  }
+  .project:hover > .projectImage {
+    width: 40%;
+    right: 0;
+  }
+}
+@media screen and (max-width: 715px) {
+  .title {
+    font-size: 36px;
+    line-height: 30px;
+  }
+  .project {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+}
+@media screen and (max-width: 410px) {
+  .projectInfo_wrapper {
+    width: 80%;
+  }
+  .project:hover > .projectImage {
+    width: 20%;
+    right: 0;
+  }
 }
