--- a/src/containers/AppContainer/App.css
+++ b/src/containers/AppContainer/App.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
   background: var(--bgColor);
   color: rgb(241, 241, 241);
-  overflow: hidden;
+  /* overflow: hidden; */
   
   display: flex;
   flex-direction: column;
@@ -13,5 +13,7 @@
 }
 
 .sectionPortfolio {
-  width: var(--maxWidth);
+  max-width: var(--maxWidth);
+  width: 100vw;
+  overflow-y: auto;
 }
