--- a/src/components/WebPortfolioLayout/WebPortfolioLayout.module.css
+++ b/src/components/WebPortfolioLayout/WebPortfolioLayout.module.css
@@ -2,3 +2,8 @@
   display: flex;
   max-width: 100%;
 }
+@media screen and (max-width: 715px) {
+  .projectsRow {
+    flex-direction: column;
+  }
+}
