--- a/src/components/PortfolioItem/PortfolioItem.module.css
+++ b/src/components/PortfolioItem/PortfolioItem.module.css
@@ -1,10 +1,10 @@
 .projectLong {
   flex-shrink: 1;
-  transition: all .7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 .projectShort {
   flex-shrink: 2;
-  transition: all .7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 
 .project {
@@ -18,16 +18,16 @@
   overflow: hidden;
   border-radius: 10px;
 
-  -webkit-box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
--moz-box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
-box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
+  -webkit-box-shadow: 2px 2px 10px 0px rgba(200, 230, 201, 1);
+  -moz-box-shadow: 2px 2px 10px 0px rgba(200, 230, 201, 1);
+  box-shadow: 2px 2px 10px 0px rgba(200, 230, 201, 1);
 }
 
 .project:hover > .projectImage {
   width: 60%;
   right: 0;
 }
-.project:hover > .projectInfo_wrapper>.projectInfo {
+.project:hover > .projectInfo_wrapper > .projectInfo {
   transform: translate(0px);
   opacity: 1;
 }
@@ -44,7 +44,7 @@ box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
   width: 250px;
   height: 250px;
   border-radius: 125px;
-  background-color: #E0E0E0;
+  background-color: #e0e0e0;
 }
 .projectWrapper_circleBg_small {
   position: absolute;
@@ -53,7 +53,7 @@ box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
   width: 35px;
   height: 35px;
   border-radius: 100px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 .projectInfo {
   position: absolute;
@@ -69,7 +69,7 @@ box-shadow: 2px 2px 10px 0px rgba(200,230,201,1);
   padding: 20px;
   display: flex;
   flex-direction: column;
-  transition: all .7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 ul.projectInfo_list {
   margin-top: auto;
@@ -94,7 +94,6 @@ h3 {
   display: flex;
   margin-bottom: 20px;
   margin-right: 12px;
-
 }
 .camoLogo {
   width: 60px;
@@ -120,7 +119,7 @@ li {
   width: 100%;
   height: 100%;
   cursor: pointer;
-  transition: all .7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
 
 .image {
