--- a/src/containers/SkilsContainer/SkilsContainer.module.css
+++ b/src/containers/SkilsContainer/SkilsContainer.module.css
@@ -1,6 +1,75 @@
-.motionItemsRow {
-  display: flex;
+.skilsSection {
+  overflow: scroll;
+  padding: 0 30px;
 }
+
+.title {
+  text-align: center;
+  line-height: 100px;
+  margin-bottom: 30px;
+  font-size: 52px;
+  color: var(--textColor);
+  margin: 0;
+  line-height: 52px;
+  
+}
+
+.skilsRow {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.skilsCol {
+  /* border: 1px solid #E0E0E0; */
+  background-color: #041811;
+  border-radius: 15px;
+  width: 210px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  color: var(--textColor);
+  
+}
+
+.skilCol_title {
+  text-align: center;
+  margin: 15px 0;
+}
+
+.listSkils {
+  display: flex;
+  flex-direction: column;
+}
+.listSkils>li {
+  list-style-type: none;
+  opacity: .7;
+  margin: 5px;
+  line-height: 1.2rem;
+  width: 100%;
+  white-space: nowrap;
+}
+
 .lottieContainer {
   max-width: 700px;
+}
+
+
+
+@media screen and (max-width: 850px) {
+  .title {
+    font-size: 48px;
+    line-height: 42px;
+  }
+}
+
+@media screen and (max-width: 715px) {
+  .title {
+    font-size: 36px;
+    line-height: 30px;
+  }
+}
+
+@media screen and (max-width: 580px) {
 }
