--- a/src/components/PortfolioItem/PortfolioItem.module.css
+++ b/src/components/PortfolioItem/PortfolioItem.module.css
@@ -36,6 +36,7 @@
   width: 40%;
   height: 100%;
   background-color: #fff;
+  transition: all 0.7s ease-in-out;
 }
 .projectWrapper_circleBg {
   position: absolute;
