--- a/src/containers/AppContainer/App.css
+++ b/src/containers/AppContainer/App.css
@@ -1,10 +1,11 @@
 .App {
-  width: 100%;
+  position: relative;
+  width: 100vw;
   height: 100%;
   max-width: var(--maxWidth);
   min-height: 100vh;
   background: var(--bgColor);
-  color: rgb(241, 241, 241);
+  color: var(--textColor);
   /* overflow: hidden; */
   
   display: flex;
