--- a/src/components/MotionPortfolioLayout/MotionPortfolioLayout.module.css
+++ b/src/components/MotionPortfolioLayout/MotionPortfolioLayout.module.css
@@ -1,12 +1,26 @@
 .motionItemsRow {
   display: flex;
+  align-items: center;
+  justify-content: center;
+flex-wrap: wrap;
+margin-bottom: 50px;
 }
 
 .motionItem {
+  flex-grow: 2;
   min-width: 300px;
-  
+  max-width: 600px;
+  height: 300px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 10px;
 }
 .motionItem_image {
-  object-fit: contain;
+  object-fit: cover;
   width: 100%; height: 100%;
+}
+
+@media screen and (max-width: 655px) {
+  
+
 }
