--- a/src/containers/SkilsContainer/SkilsContainer.module.css
+++ b/src/containers/SkilsContainer/SkilsContainer.module.css
@@ -1,10 +1,7 @@
 .skilsSection {
-  /* overflow: scroll; */
   padding: 0 30px;
   max-width: var(--maxWidth);
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
+  margin-bottom: 50px;
 }
 
 .title {
