--- a/src/containers/PortfolioContainer/Portfolio.module.css
+++ b/src/containers/PortfolioContainer/Portfolio.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   max-width: 1200px;
-  height: 100vh;
+  /* height: 100vh; */
   padding-top: 100px;
   color: #fff;
   padding: 108px 30px;
