--- a/src/containers/SkilsContainer/SkilsContainer.module.css
+++ b/src/containers/SkilsContainer/SkilsContainer.module.css
@@ -12,7 +12,6 @@
   color: var(--textColor);
   margin: 0;
   line-height: 52px;
-  
 }
 
 .skilsRow {
@@ -25,6 +24,7 @@
 .skilsCol {
   /* border: 1px solid #E0E0E0; */
   /* background-color: #24195E; */
+  /* transform: rotate3d(1, 1, 0, 0deg); */
   flex: 2 2 auto;
   margin: 7px 15px;
   border-radius: 15px;
@@ -32,6 +32,11 @@
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+  transition: all 0.5s ease-in;
+}
+.skilsCol:hover {
+  transform: rotate3d(2, 1, 0, 15deg);
 }
 
 .skilCol_title {
@@ -43,7 +48,7 @@
   display: flex;
   flex-direction: column;
 }
-.listSkils>li {
+.listSkils > li {
   list-style-type: none;
   /* opacity: .7; */
   color: var(--blueTextColor);
@@ -57,8 +62,6 @@
   max-width: 700px;
 }
 
-
-
 @media screen and (max-width: 850px) {
   .title {
     font-size: 48px;
@@ -71,10 +74,13 @@
     font-size: 36px;
     line-height: 30px;
   }
-  /* .skilsRow {
-    flex-direction: column;
-  } */
+  .skilSection {
+    padding: 0 20px;
+  }
 }
 
 @media screen and (max-width: 580px) {
+  .skilsSection {
+    padding: 0 10px;
+  }
 }
