--- a/src/containers/HomeContainer/Home.module.css
+++ b/src/containers/HomeContainer/Home.module.css
@@ -42,7 +42,7 @@
   display: flex;
   align-items: center;
 }
-.catchPhone_btn>img {
+.catchPhone_img {
   width: 20px;
   margin-left: 10px;
 }
@@ -74,16 +74,13 @@
 .col_lottie {
   min-width: 40%;
   margin-left: 20px;
-  /* margin-bottom: 45px; */
   max-width: 100%;
   min-height: 200px;
-  /* max-height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 .lottieContainer {
-  /* margin-bottom: 50px; */
   position: relative;
   height: 100%;
   display: flex;
@@ -118,12 +115,12 @@
 @media screen and (max-width: 850px) {
   .title {
     font-size: 48px;
-    line-height: 42px;
+    line-height: 52px;
   }
   .description {
     margin-top: 32px;
     font-size: 20px;
-    line-height: 25px;
+    line-height: 24px;
   }
 }
 @media screen and (max-width: 715px) {
@@ -133,7 +130,7 @@
   }
   .title {
     font-size: 36px;
-    line-height: 30px;
+    line-height: 38px;
   }
   .description {
     margin-top: 20px;
@@ -142,8 +139,11 @@
   }
   .catchPhone_btn {
     margin-top: 25px;
-    padding: 10px 20px;
-    font-size: 16px;
+    font-size: 18px;
+    padding: 7px 16px;
+  }
+  .catchPhone_img {
+    width: 18px;
   }
 }
 @media screen and (max-width: 580px) {
@@ -152,7 +152,10 @@
   }
   .title {
     font-size: 36px;
-    line-height: 30px;
+    line-height: 38px;
+  }
+  .col_text {
+    max-width: 400px;
   }
   .description {
     margin-top: 20px;
@@ -161,8 +164,11 @@
   }
   .catchPhone_btn {
     margin-top: 25px;
-    padding: 10px 20px;
     font-size: 16px;
+    padding: 5px 10px;
+  }
+  .catchPhone_img {
+    width: 16px;
   }
  .contentAlign {
   flex-direction: column;
