--- a/src/components/MotionPortfolioItem/MotionItem.module.css
+++ b/src/components/MotionPortfolioItem/MotionItem.module.css
@@ -1,7 +1,8 @@
 .motionItem {
+  align-self: flex-start;
   flex-grow: 2;
   min-width: 300px;
-  max-width: 600px;
+  max-width: 620px;
   height: 300px;
   border-radius: 10px;
   overflow: hidden;
@@ -10,4 +11,46 @@
 .motionItem_image {
   object-fit: cover;
   width: 100%; height: 100%;
+}
+
+@media screen and ( max-width: 933px) {
+  .motionItem {
+    min-width: 250px;
+    max-width: 500px;
+  }
+}
+@media screen and ( max-width: 900px) {
+  .motionItem {
+    height: 250px;
+    min-width: 250px;
+    max-width: 420px;
+  }
+}
+@media screen and ( max-width: 770px) {
+  .motionItem {
+    height: 220px;
+    min-width: 220px;
+    max-width: 420px;
+  }
+}
+@media screen and ( max-width: 770px) {
+  .motionItem {
+    height: 200px;
+    min-width: 200px;
+    max-width: 420px;
+  }
+}
+@media screen and ( max-width: 636px) {
+  .motionItem {
+    height: 200px;
+    min-width: 200px;
+    max-width: 280px;
+  }
+}
+@media screen and ( max-width: 536px) {
+  .motionItem {
+    height: 300px;
+    min-width: 300px;
+    max-width: 620px;
+  }
 }
