--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,18 +2,25 @@
   position: fixed;
   z-index: 100;
   top: 0;
-  width: calc(100%-40px);
-  max-width: var(--maxWidth);
   /* background-color: #212121; */
-  padding: 20px 30px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-
+  
   /* -webkit-box-shadow: 0px -5px 17px 0px rgba(250, 250, 250, 0.3);
   -moz-box-shadow: 0px -5px 17px 0px rgba(250, 250, 250, 0.3);
   box-shadow: 0px -5px 17px 0px rgba(250, 250, 250, 0.3); */
+}
+.contentSize {
+  padding: 20px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* width: calc(100%-40px); */
+  width: 100%;
+  max-width: var(--maxWidth);
+
 }
 .headerImg {
   width: 50px;
@@ -59,7 +66,7 @@
   
 }
 @media screen and (max-width: 715px) {
- .header {
+ .contentSize {
   padding: 15px;
  }
 } 
@@ -70,7 +77,7 @@
   .headerImg {
     width: 35px;
   }
-  .header {
+  .contentSize {
     padding: 10px;
   }
   .burger {
