--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: "Manrope", sans-serif;
+  background-color: var(--bgColor);
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: "Archivo Black", sans-serif;
