--- a/src/components/MotionPortfolioLayout/MotionPortfolioLayout.module.css
+++ b/src/components/MotionPortfolioLayout/MotionPortfolioLayout.module.css
@@ -6,3 +6,12 @@
   margin-bottom: 50px;
 }
 
+.projectsRow {
+  display: flex;
+  max-width: 100%;
+}
+@media screen and (max-width: 715px) {
+  .projectsRow {
+    flex-direction: column;
+  }
+}
