--- a/src/components/ButtonLink/ButtonLink.module.css
+++ b/src/components/ButtonLink/ButtonLink.module.css
@@ -14,12 +14,22 @@ a {
  text-decoration: none;
 }
 .btnIcon {
- width: 28px;
+ width: 22px;
  margin-left: 15px;
 }
-.button:hover {
+
+.hover {
  background: var(--purpleColor);
- letter-spacing: .1em;
+ /* letter-spacing: .1em; */
+}
+.hover:hover img {
+  animation: arrowMoving .3s ease-in-out infinite;
+}
+
+@keyframes arrowMoving {
+  0% {transform: translateX(0)}
+  50% {transform: translateX(2px)}
+  100% {transform: translateX(0px)}
 }
 
 @media screen and (max-width: 715px) {
@@ -39,5 +49,6 @@ a {
   }
   .btnIcon {
     width: 16px;
+    margin-left: 7px;
   } 
 }
