--- a/src/containers/PortfolioContainer/Portfolio.module.css
+++ b/src/containers/PortfolioContainer/Portfolio.module.css
@@ -6,7 +6,7 @@
   /* height: 100vh; */
   padding-top: 100px;
   color: #fff;
-  padding: 108px 30px;
+  padding: 0 30px;
 }
 .title {
   text-align: center;
