fixed hide out the screen

--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -2,7 +2,7 @@
   display: none;
   position: fixed;
   background-color: #000;
-  right: -167px;
+  right: -100%;
   top: 54px;
   padding: 10px 15px;
   border-radius: 0 0 0 10px;
