--- a/src/components/PortfolioItem/PortfolioItem.module.css
+++ b/src/components/PortfolioItem/PortfolioItem.module.css
@@ -18,6 +18,18 @@
   overflow: hidden;
   border-radius: 10px;
 }
+.openBtn {
+  position: absolute;
+  z-index: 10;
+  right: 10px;
+  top: 10px;
+  background-color: var(--orangeColor);
+  border: none;
+  padding: 5px 10px;
+  color: var(--textColor);
+  border-radius: 15px;
+  cursor: pointer;
+}
 .project:hover {
   -webkit-box-shadow: 2px 2px 10px 0px rgba(174, 103, 250, 1);
   -moz-box-shadow: 2px 2px 10px 0px rgba(174, 103, 250, 1);
@@ -86,7 +98,9 @@ h3 {
   margin-bottom: 10px;
 }
 .linkToSite {
+  cursor: pointer;
   display: flex;
+  align-items: center;
   color: var(--grayDark);
 }
 .projectLogo {
@@ -99,6 +113,9 @@ h3 {
 }
 .camoLogo {
   width: 60px;
+}
+.myLogo {
+  width: 30px;
 }
 .textInfo {
   color: var(--grayDark);
