--- a/src/components/Novohoodonosor/Novohoodonosor.module.css
+++ b/src/components/Novohoodonosor/Novohoodonosor.module.css
@@ -3,8 +3,21 @@
   padding: 20px;
   display: flex;
   justify-content: center;
+  height: 340px;
+  position: relative;
+  overflow: hidden;
 }
 .imgNovo {
   text-align: center;
   max-width: 300px;
+  animation: revealShip 1s ease-in-out;
+}
+
+@keyframes revealShip {
+  0% {
+    transform: translateY(350px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
