--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,29 +2,23 @@
   position: fixed;
   z-index: 100;
   top: 0;
-  /* background-color: #212121; */
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  
-  /* -webkit-box-shadow: 0px -5px 17px 0px rgba(250, 250, 250, 0.3);
-  -moz-box-shadow: 0px -5px 17px 0px rgba(250, 250, 250, 0.3);
-  box-shadow: 0px -5px 17px 0px rgba(250, 250, 250, 0.3); */
 }
 .contentSize {
   padding: 20px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* width: calc(100%-40px); */
   width: 100%;
   max-width: var(--maxWidth);
 
 }
 .headerImg {
+  cursor: pointer;
   width: 50px;
-  /* height: 50px; */
 }
 .desktop {
   display: block;
