--- a/src/components/WebPortfolioLayout/WebPortfolioLayout.module.css
+++ b/src/components/WebPortfolioLayout/WebPortfolioLayout.module.css
@@ -16,12 +16,35 @@
   margin-bottom: 50px;
 }
 
+.betweenMargin {
+  margin-top: 35px;
+}
+
 .projectsRow {
   display: flex;
   max-width: 100%;
 }
+@media screen and (max-width: 850px) {
+  .title {
+    font-size: 48px;
+    line-height: 42px;
+  }
+  .betweenMargin {
+    margin-top: 22px;
+  }
+}
 @media screen and (max-width: 715px) {
   .projectsRow {
     flex-direction: column;
+  }
+  .betweenMargin {
+    margin-top: 0;
+  }
+}
+
+
+@media screen and (max-width: 580px) {
+  .skilsSection {
+    padding: 0 10px;
   }
 }
