--- a/src/containers/PortfolioContainer/Portfolio.module.css
+++ b/src/containers/PortfolioContainer/Portfolio.module.css
@@ -4,14 +4,15 @@
   width: 100%;
   max-width: 1200px;
   /* height: 100vh; */
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
   color: #fff;
-  padding: 0 30px;
 }
 .title {
   text-align: center;
   line-height: 100px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   font-size: 52px;
   color: var(--textColor);
 }
@@ -21,20 +22,24 @@
     font-size: 48px;
     line-height: 55px;
   }
+  .container {
+    padding: 70px 20px 0 20px;
+  }
 }
 
 @media screen and (max-width: 715px) {
   .container {
-    padding: 108px 20px
+    padding: 70px 20px 0 20px;
   }
   .title {
     font-size: 36px;
     line-height: 40px;
+    margin-bottom: 30px;
   }
 }
 @media screen and (max-width: 580px) {
   .container {
-    padding: 64px 10px
+    padding: 64px 10px 0 10px;
   }
 }
 
